--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -653,7 +653,7 @@
     position: relative;
     width: 100%;
     height: 450px;
-    background: url('/assets/images/메인화면/ocean_title.png') center/cover no-repeat;
+    overflow: hidden;
 }
 
 .heroTextArea {
